--- a/app/presentation/template/forms/sw_hw_new.html
+++ b/app/presentation/template/forms/sw_hw_new.html
@@ -9,7 +9,7 @@
     </div>
     <div class="form-row">
         <div class="form-element">
-            <label>LIS badgenummer (*)<input id="lis-badge-field" name="lis_badge_id" ></label>
+            <label class="required">LIS badgenummer<input id="lis-badge-field" name="lis_badge_id" ></label>
         </div>
         <button id="lis-badge-scan" class="btn btn-success">Scan LIS badge</button>
     </div>
@@ -17,13 +17,13 @@
     <div id="group-1">
     <div class="form-row" id="owner-row">
         <div class="form-element">
-            <label>Eigenaar (*)<select id="owner-field" name="laptop_owner_id"></select></label>
+            <label class="required">Eigenaar<select id="owner-field" name="laptop_owner_id"></select></label>
         </div>
         <button id="owner-badge-scan" class="btn btn-success">Scan badge van eigenaar</button>
     </div>
     <div class="form-row">
         <div class="form-element">
-            <label>Laptop (*)<select id="laptop-field" style="min-width: 400px" name="laptop_serial"></select></label>
+            <label class="required">Laptop<select id="laptop-field" style="min-width: 400px" name="laptop_serial"></select></label>
         </div>
         <button id="laptop-code-scan" class="btn btn-success">Scan laptop label</button>
     </div>
@@ -46,10 +46,10 @@
     </div>
     <div class="form-row">
         <div class="form-element">
-            <label>Type incident (*)<select id="lis-type-field" name="incident_type"></select>
+            <label>Type incident<select id="lis-type-field" name="incident_type"></select>
             </label>
         </div>
-        <div id="hardware-damage-group" class="form-element">
+        <div id="hardware-repair-group" class="form-element">
             <label>M4S Categorie<select id="m4s-category-field" name="m4s_category"></select></label>
             <label>M4S Probleem<select id="m4s-problem-type-guid-field" name="m4s_problem_type_guid"></select></label>
         </div>
@@ -64,7 +64,7 @@
     </div>
     <div class="form-row">
         <div class="form-element">
-            <label>Info<span id="info-label-required-field" hidden>&nbsp;(*)</span> <textarea id="info-field" rows="6" cols="80" style="line-height: 1" name="info"></textarea></label>
+            <label>Info<textarea id="info-field" rows="6" cols="80" style="line-height: 1" name="info"></textarea></label>
         </div>
     </div>
 </form>
