--- a/app/presentation/template/forms/sw_hw_update.html
+++ b/app/presentation/template/forms/sw_hw_update.html
@@ -31,7 +31,7 @@
         <div class="form-element">
             <label>Type incident<select id="lis-type-field" name="incident_type"></select></label>
         </div>
-        <div id="hardware-damage-group">
+        <div id="hardware-repair-group">
             <label>M4S Categorie<input id="m4s-category-field" name="m4s_category" disabled></label>
             <label>M4S Probleem<input id="m4s-problem-type-guid-field" name="m4s_problem_type_guid" disabled></label>
         </div>
