--- a/app/presentation/template/forms/sw_hw_update.html
+++ b/app/presentation/template/forms/sw_hw_update.html
@@ -32,8 +32,8 @@
             <label>Type incident<select id="lis-type-field" name="incident_type"></select></label>
         </div>
         <div id="hardware-repair-group">
-            <label>M4S Categorie<input id="m4s-category-field" name="m4s_category" disabled></label>
-            <label>M4S Probleem<input id="m4s-problem-type-guid-field" name="m4s_problem_type_guid" disabled></label>
+            <label>M4S Categorie<select id="m4s-category-field" name="m4s_category"></select></label>
+            <label>M4S Probleem<select id="m4s-problem-type-guid-field" name="m4s_problem_type_guid"></select></label>
         </div>
     </div>
     <div class="form-row" hidden>
