--- a/app/presentation/template/forms/history.html
+++ b/app/presentation/template/forms/history.html
@@ -12,13 +12,13 @@
     </div>
     <div class="form-row">
         <div class="form-element">
-            <label>Laptop<input id="laptop-field" name="laptop_name"></label>
+            <label>Laptop<input id="laptop-field" name="laptop_name" size="40"></label>
         </div>
     </div>
     <div class="form-row">
         <div class="form-element">
             <table id="history-table">
-                <tr><th>Datum</th><th>Hersteller</th><th>Prio</th><th>Status</th><th>Locatie</th><th>Info</th><th>Type</th><th>Val</th><th>Water</th></tr>
+                <tr><th>Datum</th><th>Hersteller</th><th>Prio</th><th>Status</th><th>Locatie</th><th>Info</th><th>Type</th></tr>
             </table>
         </div>
     </div>
