--- a/app/presentation/template/forms/sw_hw_new.html
+++ b/app/presentation/template/forms/sw_hw_new.html
@@ -8,7 +8,11 @@
         </div>
         <button id="lis-badge-scan" class="btn btn-success">Scan LIS badge</button>
     </div>
-    <div id="group-1">
+    <div class="form-row">
+        <div class="form-element"><label><input type="checkbox" id="type-spare-laptop-chk" name="spare_laptop_check">Is het een reserve laptop?</label></div>
+    </div>
+
+    <div class="group-spare-laptop">
         <div class="form-row" id="owner-row">
             <div class="form-element">
                 <label class="required">Eigenaar<select id="owner-field" name="laptop_owner_id"></select></label>
@@ -31,7 +35,7 @@
         <div class="form-element">
             <label>Reserve laptop<input id="spare-field" name="spare_laptop_name"></label>
         </div>
-        <div class="form-element">
+        <div class="form-element group-spare-laptop">
             <label><input type="checkbox" id="spare-charger-chk" name="charger">Lader?</label>
         </div>
         <button id="spare-badge-scan" class="btn btn-success">Scan badge van reservelaptop</button>
@@ -39,7 +43,6 @@
     <div class="form-row">
         <div class="form-element"><label>Locatie<select id="location-field" name="location"></select></label></div>
         <div class="form-element"><label>Status<input name="incident_state" disabled></label></div>
-        <div class="form-element"><label><input type="checkbox" id="type-spare-laptop-chk" name="spare_laptop_check">Is het een reserve laptop?</label></div>
     </div>
     <div class="form-row">
         <div class="form-element">
