--- a/app/presentation/template/forms/sw_hw_update.html
+++ b/app/presentation/template/forms/sw_hw_update.html
@@ -9,9 +9,7 @@
     <div class="form-row">
         <div class="form-element"><label>Laptop<input name="laptop_name" disabled></label></div>
     </div>
-
-
-    <div id="group-1">
+    <div class="group-spare-laptop">
         <div class="form-row">
             <div class="form-element"><label>Wachtwoord<input id="password-field" name="laptop_owner_password"></label></div>
             <div class="form-element"><i id="password-show-field" class="fa-regular fa-eye-slash"></i></div>
