--- a/app/presentation/template/forms/loan_new.html
+++ b/app/presentation/template/forms/loan_new.html
@@ -4,6 +4,7 @@
 <form id="loan-form">
     <div class="form-row">
         <div class="form-element"><label>Locatie<select id="location-field" name="location"></select></label></div>
+        <div class="form-element"><label>Status<select id="incident-state-field" name="incident_state"></select></label></div>
     </div>
 
     <div class="form-row" id="owner-row">
