--- a/app/presentation/template/base.html
+++ b/app/presentation/template/base.html
@@ -30,7 +30,7 @@
 <nav>
     <div>
         <div>
-            <img src="{{ url_for('static', filename='img/warning.png') }}" alt="" height="40">
+            <img src="{{ url_for('static', filename='img/warning.png') }}" alt="" height="40" style="visibility: hidden">
             <img src="{{ url_for('static', filename='img/computer-repair.png') }}" alt="" height="40">
             {% if current_user.is_authenticated %}
                 <ul id="navbar"></ul>
