--- a/app/presentation/template/forms/repair_update.html
+++ b/app/presentation/template/forms/repair_update.html
@@ -11,9 +11,8 @@
     </div>
     <div class="group-spare-laptop">
         <div class="form-row">
-            <div class="form-element"><label>Wachtwoord<input id="password-field" name="laptop_owner_password"></label></div>
-            <div class="form-element"><i id="password-show-field" class="fa-regular fa-eye-slash"></i></div>
-            <div class="form-element"><label><input type="checkbox" id="password-default-chk" name="laptop_owner_password_default">Standaard paswoord?</label></div>
+            <div class="form-element"><label>Wachtwoord&nbsp;<i id="password-show-field" class="fa-regular fa-eye-slash"></i><input id="password-field" name="laptop_owner_password"></label></div>
+            <div class="form-element"><label><input type="checkbox" id="password-default-chk" name="laptop_owner_password_default">Standaard&nbsp;paswoord?</label></div>
         </div>
         <div class="form-row">
             <div class="form-element"><label>Reserve laptop<input id="spare-field" name="spare_laptop_serial"></label></div>
@@ -43,6 +42,6 @@
         </div>
     </div>
     <div class="form-row">
-        <div class="form-element"><label>Info<textarea id="info-field" rows="6" cols="80" style="line-height: 1" name="info"></textarea></label></div>
+        <div class="form-element"><label>Info<textarea id="info-field" rows="6" style="line-height: 1" name="info"></textarea></label></div>
     </div>
 </form>
