--- a/app/presentation/template/m/incident_update.html
+++ b/app/presentation/template/m/incident_update.html
@@ -1,4 +1,21 @@
-<link href="static/css/form.css" rel="stylesheet">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mobile Layout</title>
+    <link href="static/css/m/incident.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
+
+</head>
+<body>
+<nav>
+    <div>
+        <button id="cancel-btn" class="red">Annuleer</button>
+        <button id="save-btn" class="green">Opslaan</button>
+    </div>
+</nav>
+<main>
 <form id="incident-form">
     <div class="form-row">
         <div class="form-element"><label>LIS badgenummer<input name="lis_badge_id" disabled></label></div>
@@ -12,12 +29,11 @@
     <div class="group-spare-laptop">
         <div class="form-row">
             <div class="form-element"><label>Wachtwoord&nbsp;<i id="password-show-field" class="fa-regular fa-eye-slash"></i><input id="password-field" name="laptop_owner_password"></label></div>
-            <div class="form-element"><label><input type="checkbox" id="password-default-chk" name="laptop_owner_password_default">Standaard paswoord?</label></div>
+            <div class="form-element"><label><input type="checkbox" id="password-default-chk" name="laptop_owner_password_default">Standaard&nbsp;paswoord?</label></div>
         </div>
         <div class="form-row">
             <div class="form-element"><label>Reserve laptop<input id="spare-field" name="spare_laptop_serial"></label></div>
             <div class="form-element"><label><input type="checkbox" id="spare-charger-chk" name="charger">Lader?</label></div>
-            <button id="spare-badge-scan" class="btn btn-success">Scan badge van reservelaptop</button>
         </div>
     </div>
     <div class="form-row">
@@ -42,6 +58,21 @@
         </div>
     </div>
     <div class="form-row">
-        <div class="form-element"><label>Info<textarea id="info-field" rows="6" cols="80" style="line-height: 1" name="info"></textarea></label></div>
+        <div class="form-element"><label>Info<textarea id="info-field" rows="6" style="line-height: 1; width: '-webkit-fill-available';
+    margin-bottom: 10px;" name="info"></textarea></label></div>
     </div>
 </form>
+</main>
+<footer><p class="copyright text-muted small">{{ version }}</p></footer>
+
+{{ JSGlue.include() }}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script>
+    const incident = {{ (incident or [])|tojson }};
+</script>
+<script type="module" src="/static/js/m/incident.js"></script>
+
+
+</body>
+
+</html>
