--- a/app/presentation/template/forms/repair.html
+++ b/app/presentation/template/forms/repair.html
@@ -1,6 +1,6 @@
 <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet"/>
 <script src="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js"></script>
-<link href="static/css/form.css" rel="stylesheet">
+{{ form_css_file }}
 <form id="incident-form">
     <div class="form-row">
         <div class="form-element">
@@ -9,7 +9,7 @@
         <button id="lis-badge-scan" class="btn btn-success  repair-update-hidden">Scan LIS badge</button>
     </div>
     <div class="form-row repair-update-hidden">
-        <div class="form-element"><label><input type="checkbox" id="type-spare-laptop-chk" name="spare_laptop_check">Is het een reserve laptop?</label></div>
+        <div class="form-element repair-update-hidden"><label><input type="checkbox" id="type-spare-laptop-chk" name="spare_laptop_check">Is&nbsp;het&nbsp;een&nbsp;reserve&nbsp;laptop?</label></div>
     </div>
 
     <div class="group-spare-laptop">
@@ -26,9 +26,8 @@
             <button id="laptop-code-scan" class="btn btn-success repair-update-hidden">Scan laptop label</button>
         </div>
         <div class="form-row">
-            <div class="form-element"><label>Wachtwoord<input id="password-field" name="laptop_owner_password"></label></div>
-            <div class="form-element"><i id="password-show-field" class="fa-regular fa-eye-slash"></i></div>
-            <div class="form-element"><label><input type="checkbox" id="password-default-chk" name="laptop_owner_password_default">Standaard paswoord?</label></div>
+            <div class="form-element"><label>Wachtwoord&nbsp;<i id="password-show-field" class="fa-regular fa-eye-slash"></i><input id="password-field" name="laptop_owner_password"></label></div>
+            <div class="form-element"><label><input type="checkbox" id="password-default-chk" name="laptop_owner_password_default">Standaard&nbsp;paswoord?</label></div>
         </div>
     </div>
     <div class="form-row">
@@ -50,15 +49,15 @@
             </label>
         </div>
         <div id="hardware-repair-group" class="form-element">
-            <label>M4S Categorie<select id="m4s-category-field" name="m4s_category"></select></label>
-            <label>M4S Probleem<select id="m4s-problem-type-guid-field" name="m4s_problem_type_guid"></select></label>
+            <label>M4S&nbsp;Categorie<select id="m4s-category-field" name="m4s_category"></select></label>
+            <label>M4S&nbsp;Probleem<select id="m4s-problem-type-guid-field" name="m4s_problem_type_guid"></select></label>
         </div>
     </div>
     <div class="form-row repair-update-visible" hidden>
         <div class="form-element">
             <div style="display: flex; flex-direction: column">
-                <p><b>Vorige info:</b></p>
-                <p id="info_previous"></p>
+                <p style="margin-top: 10px; margin-bottom: 0"><b>Vorige info:</b></p>
+                <p style="margin-top: 0; margin-bottom: 0" id="info_previous"></p>
             </div>
         </div>
     </div>
