--- a/app/presentation/template/m/incident.html
+++ b/app/presentation/template/m/incident.html
@@ -9,7 +9,7 @@
 <body>
 <nav>
     <div>
-        <button class=".green">New</button>
+        <button id="repair-new-btn" class="green">Nieuw</button>
     </div>
     <div>
         <input id="search-input" type="text" placeholder="Zoeken...">
