--- a/app/presentation/template/forms/repair.html
+++ b/app/presentation/template/forms/repair.html
@@ -15,13 +15,13 @@
     <div class="group-spare-laptop">
         <div class="form-row" id="owner-row">
             <div class="form-element">
-                <label class="required">Eigenaar<select class="repair-update-disabled" id="owner-field" name="laptop_owner_id"></select></label>
+                <label class="required">Eigenaar<select class="repair-update-disabled" id="owner-field" name="laptop_owner_id" style="width: 90%"></select></label>
             </div>
             <button id="owner-badge-scan" class="btn btn-success  repair-update-hidden">Scan badge van eigenaar</button>
         </div>
         <div class="form-row">
-            <div class="form-element">
-                <label class="required">Laptop<select class="repair-update-disabled" id="laptop-field" style="min-width: 400px" name="laptop_serial"></select></label>
+            <div class="form-element" style="min-width: 30%">
+                <label class="required">Laptop<select class="repair-update-disabled" id="laptop-field" name="laptop_serial"></select></label>
             </div>
             <button id="laptop-code-scan" class="btn btn-success repair-update-hidden">Scan laptop label</button>
         </div>
