--- a/app/presentation/template/forms/setting.html
+++ b/app/presentation/template/forms/setting.html
@@ -2,7 +2,7 @@
 <form id="setting-form">
     <div class="form-row" id="owner-row">
         <div class="form-element">
-            <label>standaard locatie<select id="location-default-field" name="location"></select></label>
+            <label>standaard locatie<select id="location-default-field" name="home_location"></select></label>
         </div>
     </div>
     <div class="form-row" id="owner-row">
