--- a/app/presentation/template/forms/return.html
+++ b/app/presentation/template/forms/return.html
@@ -1,3 +1,5 @@
+<link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet"/>
+<script src="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js"></script>
 <link href="static/css/form.css" rel="stylesheet">
 <form id="incident-form">
     <div class="prepared-visible">
@@ -17,14 +19,14 @@
         </div>
     </div>
     <div class="form-row">
-        <div class="form-element"><label>Locatie<select id="location-field" name="location"></select></label></div>
-        <div class="form-element"><label>Status<select name="incident_state"></select></label></div>
-    </div>
-    <div class="form-row">
         <div class="form-element">
             <label>Wat moet met de laptop gebeuren?<select id="lis-type-field" name="incident_type"></select>
             </label>
         </div>
+    </div>
+    <div class="form-row">
+        <div class="form-element"><label>Locatie<select id="location-field" name="location"></select></label></div>
+        <div class="form-element"><label>Status<select  id="incident-state-field"  name="incident_state"></select></label></div>
     </div>
     <div class="form-row" hidden>
         <div class="form-element">
