--- a/app/presentation/template/forms/repair.html
+++ b/app/presentation/template/forms/repair.html
@@ -43,8 +43,7 @@
     </div>
     <div class="form-row">
         <div class="form-element">
-            <label>Type incident<select id="lis-type-field" name="incident_type"></select>
-            </label>
+            <label>Type incident<select id="lis-type-field" name="incident_type"></select></label>
         </div>
         <div id="hardware-repair-group" class="form-element">
             <label>M4S&nbsp;Categorie<select id="m4s-category-field" name="m4s_category"></select></label>
