--- a/app/presentation/template/forms/setting.html
+++ b/app/presentation/template/forms/setting.html
@@ -2,7 +2,30 @@
 <form id="setting-form">
     <div class="form-row" id="owner-row">
         <div class="form-element">
-            <label>standaard locatie<select id="location-default-field" name="home_location"></select></label>
+            <label>Thuislocatie<select id="location-default-field" name="home_location"></select></label>
+        </div>
+    </div>
+    <div class="form-row">
+        <hr style="width:100%">
+        <b>Toegangscodes</b><br><b>Invullen als je wilt aanpassen, anders leeglaten.</b>
+        <div class="form-element">
+            <label>PIN code <input id="pin-field" name="pin"></label>
+        </div>
+        <div class="form-element">
+            <label>RFID code <input id="rfid-field" name="rfid"></label>
+        </div>
+        <div class="form-element">
+            <button id="user-badge-scan" class="btn btn-success  repair-update-hidden">Scan badge</button>
+        </div>
+
+    </div>
+    <div class="form-row">
+        <hr style="width:100%">
+        <b>Scan onderstaande QR code om gebruik te maken van je smartphone</b>
+    </div>
+    <div class="form-row" id="owner-row">
+        <div class="form-element" style="width:100%">
+            <img id="login-url-img" src="data:image/png;base64," alt="QR Code" width="200px" style="margin-left:auto;margin-right: auto;">
         </div>
     </div>
     <div class="form-row" id="owner-row">
@@ -11,11 +34,6 @@
         </div>
         <div class="form-element">
             <button id="new-login-url-btn" class="btn btn-success" disabled>Genereer nieuwe URL</button>
-        </div>
-    </div>
-    <div class="form-row" id="owner-row">
-        <div class="form-element">
-            <img id="login-url-img" src="data:image/png;base64," alt="QR Code">
         </div>
     </div>
 </form>
