--- a/app/presentation/template/forms/repair.html
+++ b/app/presentation/template/forms/repair.html
@@ -46,8 +46,8 @@
             <label>Type incident<select id="lis-type-field" name="incident_type"></select></label>
         </div>
         <div id="hardware-repair-group" class="form-element">
-            <label>M4S&nbsp;Categorie<select id="m4s-category-field" name="m4s_category"></select></label>
-            <label>M4S&nbsp;Probleem<select id="m4s-problem-type-guid-field" name="m4s_problem_type_guid"></select></label>
+            <label class="required">M4S&nbsp;Categorie<select id="m4s-category-field" name="m4s_category"></select></label>
+            <label class="required">M4S&nbsp;Probleem<select id="m4s-problem-type-guid-field" name="m4s_problem_type_guid"></select></label>
         </div>
     </div>
     <div class="form-row">
