--- a/app/presentation/template/base.html
+++ b/app/presentation/template/base.html
@@ -57,7 +57,7 @@
     {% endblock %}
 </main>
 
-<footer><p class="copyright text-muted small">{{ version }}</p></footer>
+<footer><p class="copyright small">{{ version }}</p></footer>
 
 {% block scripts %}
     {{ JSGlue.include() }}
