--- a/app/presentation/template/login.html
+++ b/app/presentation/template/login.html
@@ -34,7 +34,7 @@
                 <a href="{{ url_for('auth.login_ss') }}"><img src="static/img/btn_smartschool.png"
                                                               alt="aanmelden via smartschool"></a>
             </div>
-            <img src="static/img/tickoff.png" class="login-image">
+            <img src="static/img/tickoff.webp" class="login-image">
         </div>
     </main>
 
