--- a/app/presentation/template/base.html
+++ b/app/presentation/template/base.html
@@ -35,6 +35,8 @@
                 <ul id="navbar"></ul>
             {% endif %}
         </div>
+        <img id="rfid-state-img" src="{{ url_for('static', filename='img/rfid.png') }}" alt="" height="40" style="margin-right: 20px;">
+
         <h2 style="white-space: nowrap;margin-bottom: 0">{{ current_user.username }}&nbsp;&nbsp;</h2>
         <a href="{{ url_for('auth.logout') }}">
             <button class="btn btn-success navbar-btn">Logout</button>
