--- a/app/presentation/template/login.html
+++ b/app/presentation/template/login.html
@@ -15,6 +15,10 @@
 <div class="container">
     <main class="content">
         <div style="display: flex;flex-wrap: wrap;">
+            <div style="display: flex;flex-direction: column;align-items: center">
+                <img id="login-url-img" src="data:image/png;base64,{{ qr }}" alt="QR Code" class="login-image">
+                <b>Mobiele scanner (Android only)</b>
+            </div>
             <div class="login-group">
                 <h2>Aanmelden met gebruikersnaam</h2>
                 <div class="login-container">
