--- a/app/presentation/template/m/scan.html
+++ b/app/presentation/template/m/scan.html
@@ -10,30 +10,46 @@
 </head>
 <body>
 <nav>
+    <div style="display:flex;justify-content: space-around">
+        <h2>Stopwatch</h2>
+    </div>
     <div>
         <select id="scan-type-select"></select>
     </div>
     <div>
         <input id="log-out" type="text" placeholder="Scanner niet actief">
     </div>
-    <div>
+    <div class="scan-class">
         <button id="clear-list-btn" class="green">Lijst wissen</button>
+    </div>
+    <div hidden class="assign-spare-class">
+        <input id="search-person-id" type="text" placeholder="Zoek deelnemer">
     </div>
 </nav>
 <main id="main" class="scan-not-active">
-    <div id="scan-list"></div>
+    <div class="scan-class" id="scan-list"></div>
+    <div hidden class="assign-spare-class">
+        <table id="person-table"></table>
+    </div>
 </main>
 
 <footer><p class="copyright text-muted small">{{ version }}</p></footer>
 
 {{ JSGlue.include() }}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js"
+        integrity="sha512-aMGMvNYu8Ue4G+fHa359jcPb1u+ytAF+P2SCb+PxrjCdO3n3ZTxJ30zuH39rimUggmTwmh2u7wvQsDTHESnmfQ=="
+        crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
 <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.5.2/bootbox.min.js"></script>
 
+<script type="module">
+    import {socketio} from "../../static/js/common/socketio.js";
+    socketio.start();
+</script>
 <script type="module" src="/static/js/m/scan.js"></script>
 
 
