--- a/app/presentation/template/m/login.html
+++ b/app/presentation/template/m/login.html
@@ -11,7 +11,7 @@
         img {
             display: block;
             margin: auto;
-            width: 200px;
+            width: 100px;
             margin-top: 15%
         }
     </style>
@@ -20,9 +20,23 @@
 <nav>
 </nav>
 <main id="main">
-    <img src="/static/img/stopwatch.png" alt="aanmelden via smartschool">
-    <a href="{{ url_for('auth.login_ss') }}"><img src="/static/img/btn_smartschool.png"
-                                                             alt="aanmelden via smartschool"></a>
+
+    <div class="login-group">
+    <img src="/static/img/stopwatch.png" alt="Stopwatch">
+        <h3>Aanmelden met Pin</h3>
+        <div class="login-container">
+            <form class="login-form" method="post">
+                <div class="form-group">
+                    <input type="text" id="login-pin" name="login-pin" placeholder="Pin aub" required>
+                </div>
+                <button class="btn-ok" type="submit">OK</button>
+            </form>
+        </div>
+        <h2 style="margin-top:20px;">Of Smartschool</h2>
+        <a href="{{ url_for('auth.login_ss') }}"><img src="static/img/btn_smartschool.png" alt="aanmelden via smartschool" style="width: 200px;margin-top:5px"></a>
+    </div>
+
+
 </main>
 
 <footer><p class="copyright text-muted small">{{ version }}</p></footer>
