--- a/app/static/css/m/scan.css
+++ b/app/static/css/m/scan.css
@@ -131,3 +131,27 @@ label:has(input[type="checkbox"]) {
   background: white;
 }
 
+.login-group {
+    border-style: solid;
+    border-width: 10px;
+    border-color: green;
+    border-radius: 20px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    margin-top:20%;
+}
+
+.login-container {
+    background-color: #ffffff;
+    padding: 20px 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: 200px;
+}
+
+.login-image {
+    height: 300px;
+}
